# covid

./: .gitignore  Makefile  Procfile  README.md  covid.py  main.py  pyproject.toml  requirements.txt  setup.cfg
app/: api.py  covid.py
app/db/: crud.py  database.py  models.py  schemas.py
app/lib/: templates.py
bot/: telegram.py
container/: Dockerfile
website/: config.toml  index.html
website/charts/: index.html
website/content/: _index.md
website/layouts/partials/: csv_cases.html
website/predictions/: index.html
website/static/: main.css
website/themes/basic-mux/layouts/: index.html
website/themes/basic-mux/static/css/: main.css
