[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Clément Schreiner", email = "clement@mux.me"},
]
license-expression = "MIT"
dependencies = [
    "aiogram",
    "fastapi",
    "Jinja2",
    "pandas",
    "seaborn",
    "tinydb",
    "uvicorn",
    "sqlalchemy>=1.4.34",
]
requires-python = ">=3.9"

[project.urls]
Homepage = ""
